@@ -86,7 +86,8 @@ static int parse_proc_cmdline_item(const char *key, const char *value) {
                 else if (streq(value, "skip"))
                         arg_skip = true;
                 else
-                        log_warning("Invalid fsck.mode= parameter. Ignoring.");
+                        log_warning("Invalid fsck.mode= parameter '%s'. Ignoring.", value);
+
         } else if (streq(key, "fsck.repair") && value) {
 
                 if (streq(value, "preen"))
@@ -96,14 +97,14 @@ static int parse_proc_cmdline_item(const char *key, const char *value) {
                 else if (streq(value, "no"))
                         arg_repair = "-n";
                 else
-                        log_warning("Invalid fsck.repair= parameter. Ignoring.");
-        } else if (startswith(key, "fsck."))
-                log_warning("Invalid fsck parameter. Ignoring.");
+                        log_warning("Invalid fsck.repair= parameter '%s'. Ignoring.", value);
+        }
 
         return 0;
 }
 
 static void test_files(void) {
+
         if (access("/run/systemd/show-status", F_OK) >= 0 || plymouth_running())
                 arg_show_progress = true;
 }
