@@ -30,6 +30,7 @@ systemd System and Service Manager
  * remove git mailmap file;
  * remove .dir-locals.el file;
  * sort gitignore;
+ * stop warning about unknown kernel cmdline options in fsck;
 
    systemd (214.6)
 ~~~~~~~
